subpages css fix

--- a/marytopia.html
+++ b/marytopia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Marytopia</title>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="subpages.css">
 </head>
 	
 <nav>
@@ -19,6 +19,6 @@
 		<img src="img/MARYTOPIA-01.jpg" width="100%" height="100%">
 		<img src="img/MARYTOPIA-02.jpg" width="100%" height="100%">
 		<img src="img/MARYTOPIA-BROCHURE.gif" float="center">
-	</div>
+	</div>W
 </body>
 </html>
