--- a/sun.html
+++ b/sun.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Sun Valley Homes</title>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="subpages.css">
 </head>
 	
 <nav>
@@ -19,7 +19,7 @@
 		<h2>Modular Housing for Arizon's Megapolitan</h2>
 				<img src="img/SVHcard.png" alt="card" style="float:left;width:100%;padding:5px;">
 
-		<p>This solo design project is a studio project, completed for M.Arch at University of Minnesota. Second year studio was led by Minneapolis architect adjunct professor Christine Peterssen. <br> The prompt was to design a modular home for a specific climate. </p>
+		<p>This solo design project is a studio project, completed for M.Arch at University of Minnesota. Second year studio was led by Minneapolis architect adjunct professor Christine Albertsson. <br> The prompt was to design a modular home for a specific climate. </p>
 			
 		<br> <br>
 		<img src="img/SVH2.jpg" alt="site" style="float:left;width:60%;padding:5px;">
