--- a/greige.html
+++ b/greige.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>The Greige Room</title>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="subpages.css">
 </head>
 	
 <nav>
