--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<li class="page"><a>Projects</a>
 			<ul>
-				<li class="subpage"><a href="www.planetarychronology.com">Planetary Chronology </a>(2020-)</li>
+				<li class="subpage"><a href="http://www.planetarychronology.com">Planetary Chronology </a>(2020-)</li>
 				<li class="subpage"><a href="habitability.html">Habitability Project </a>(2019-)</li>
 				<li class="subpage"><a href="https://arcg.is/0rmini0">Observing Territory </a>(2019)</li>
 				<li class="subpage"><a href="amazon.html">Archive Amazonia </a>(2019)</li>
