--- a/soup.html
+++ b/soup.html
@@ -16,16 +16,18 @@
 	
 		<div class="content">
 		<h1>Soup Sucks</h1>
-		<h2>This performance project is a self-intiated stunt, taking place in 2017 in Minneapolis. </h2>
+		<h2>This is a self-initiated performance project, taking place in 2017 in Minneapolis. </h2>
 		<br><br>
-		<iframe src="http://instagram.com/p/Bc2a3VHnkXb/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="left"></iframe>
-		<iframe src="http://instagram.com/p/Bc2a_lgHuVA/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="right"></iframe>
-		<iframe src="http://instagram.com/p/Bc2bGgAHDC-/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="left"></iframe>
-		<iframe src="http://instagram.com/p/Bc2bPYPnaqg/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="right"></iframe>
-		<iframe src="http://instagram.com/p/Bc2bSZPnSBw/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="left"></iframe>
-		<iframe src="http://instagram.com/p/Bc2bXmNn1zh/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="right"></iframe>
-		<iframe src="http://instagram.com/p/Bc2biTKHizu/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="left"></iframe>
-		<iframe src="http://instagram.com/p/Bc2bnXQnPwA/embed/captioned" width="500" height="605" frameborder="0" scrolling="no" allowtransparency="true" float="right"></iframe>
+		<img src="img/soup1.JPG" width="50%" float="left" alt="soup">
+		<img src="img/soup2.JPG" width="50%" float="right" alt="soup">
+		<img src="img/soup3.JPG" width="50%" float="left" alt="soup">
+		<img src="img/soup4.JPG" width="50%" float="right" alt="soup">
+		<img src="img/soup5.jpg" width="50%" float="left" alt="soup">
+		<img src="img/soup6.jpg" width="50%" float="right" alt="soup">
+		<img src="img/soup7.jpg" width="50%" float="left" alt="soup">
+		<img src="img/soup8.jpg" width="50%" float="right" alt="soup">
+		<img src="img/soup9.jpg" width="50%" float="left" alt="soup">
+		<img src="img/soup10.jpg" width="50%" float="right" alt="soup">
 		<br> <br>
 		<a class="twitter-timeline" href="https://twitter.com/souphatingrobot?ref_src=twsrc%5Etfw">Tweets by souphatingrobot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			
