--- a/amazon.html
+++ b/amazon.html
@@ -24,17 +24,18 @@
 		<br><br>
 		<p>EXCERPT: <br> The Amazon has long held status as a territorial condition, a fiction of the international imagination, an abstraction, rather than a place that is both biome and anthrome.</p>
 		<img src="img/archive2.png" alt="collecting" style="float:left;width:50%;padding:5px;">
+		<br><br><br>
 		<img src="img/archive3.png" alt="cow" style="float:right;width:50%;padding:5px;">
 		<p>In August 2019 the Amazon Rainforest was experiencing more fires that month than any other month on record. </p>
 		<p>The emergency, caused by human manipulation of natural conditions, exacerbated the natural into a preternatural state of heightened urgency.</p>
 		<p>The world was on fire. It was a global emergency. In the public sphere, the realm of appearances, political agents perform agendas. </p>
 		<p>Politics around emergency create a new logic that exists despite and outside of geography, and uses emergency to further the reach of bureaucratic action.</p>
 		<br>
-		<img src="img/archive4.png" alt="brics" style="float:left;width:100%;padding:5px;">
+		<img src="img/archive4.jpg" alt="brics" style="float:left;width:50%;padding:5px;">
 		<p>In 1970, the military government of Brazil created the National Integration Plan and the Transamazonian Highway was constructed.</p>
 		<p> The Highway was a method for expanding Brazil’s productive capacity into the untapped regions of the Northwest. Farmers were lured from the fertile south to colonize wild Amazonia. The road gave the military access to defend Brazil’s natural resources. The building of this road, despite its nationalist rhetoric, was financed and built by a combination of Brazilian and veiled foreign organizations. </p>
 		<p>In 2019, Jair Bolsonaro was elected president with the slogan “Brazil above Everything, God above Everyone.” </p>
-		<img src="img/archive5.png" alt="collecting" style="float:left;width:100%;padding:5px;">
+		<img src="img/archive5.jpg" alt="collecting" style="float:left;width:100%;padding:5px;">
 		<p>The Amazon is no longer merely nature, but also a product of the symbi-otic and parasitic rela-tionships between human and nature, politics and geography, machine and terrain. </p>
 		<p>The Amazon as global “nature” is obsolete. It has no role in the current economy.</p>
 		<br> <br>
@@ -42,7 +43,7 @@
 		<p>Using a new set of tools and machines, local activ-ists-turned-archivists cap-ture and curate the artifacts of the biological, ecological, and anthropogenic however they want- they are the experts! </p>
 		<p>They report to field offices. The original order of the forest, as the people of the forest determine, is preserved in the archive. The field office operates as the base for collecting.</p>
 		<p>Navigational maps will orient the archivists, as they gear up for a collecting trip. The archivists will process, and catalog the artifacts they collect. This is the spatial product of the archival infra-structure, a repeated series of program. </p>	
-		<img src="img/archive6.png" alt="manaus" style="float:left;width:100%;padding:5px;">
+		<img src="img/archive6.jpg" alt="manaus" style="float:left;width:100%;padding:5px;">
 		<p>Manaus is a node for logistics in this archival system. Manaus is the largest city in the Amazon, home to 3 million people. Manaus’s icon is the Amazon Theater, a pink Portugese Colonial-style building is yet another collector, as well as a place of performance. </p>
 		<p>This logistics center is where artifacts are brought to be processed; program sorted, documented, and packed into containers heading further east to Maraba.</p>
 		<br> <br>
