--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<ul>
 				<li class="subpage"><a href="it.html">Interesting Tactics </a>(2018-, designer)</li>
 				<li class="subpage"><a href="https://wam.umn.edu/education/target-studio-for-creative-collaboration/habitability-project/">Habitability Project </a>(2019-, PM and contributor)</li>
+				<li class="subpage"><a href="http://www.planetarychronology.com">Planetary Chronology </a>(2020-)</li>
 				<li class="subpage"><a href="https://x-commons.com/Architectures-of-Reassurance-Between-Emergency-and-Play">
 					University of Minnesota SoA Catalyst 2020 </a>Architectures of Reassurance: Between Emergency and Play (2020, program assistant)</li>
 				<li class="subpage"><a href="wiaso.html">WIASO </a>(2018-2020, organizer)</li>
