--- a/it.html
+++ b/it.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="content">
 		<h1>Interesting Tactics</h1>
-		<p>Interesting Tactics is an architecture collaborative established in 2018. Active participants include Mary Dahlman Begley, Isaac Hase, Drew Smith, and Austin Watanabe. This is a selection of 3 projects, all created in Minneapolis 2019-2020; accompanying text produced by MDB in May 2019.</p>
+		<p>Interesting Tactics is an architecture collaborative established in 2018. Active participants include Mary Dahlman Begley, Isaac Hase, Drew Smith, and Austin Watanabe. This is a selection of 3 projects, all created in Minneapolis 2019-2020; accompanying text produced by MDB in May 2020.</p>
 		<p> ONLINE AT: <br>
 			<a href="www.interestingtactics.com">www.interestingtactics.com</a><br>
 			<a href="www.instagram.com/int_tactics">@int_tactics</a></p><br>
@@ -64,7 +64,7 @@
 		<br>
 		<p>EXCERPT from “The Agency of Chair-ing: a proposal for microsurface” Published 2019 by X-Commons:</p>
 		<p>Superstudio’s Supersur-face has similarities to a chairscape in its total-izing, alienating conti-nuity. A favorable politic is present: the Cartesian grid represents an ordered and supposed rational dis-tribution of resources. In representation, this environment is ethereal and evocative. Supersurface is a “box of polar-ized mirror glass with a grid in the floor through which tubes project, bringing air, food, water, and commu-nications to the occu-pants, who can also watch a film on TV that describes the design-er’s vision of the world and see pic-tures of clouds pro-jecting on the ceiling.” </p>
-		<p>A grim reality, Superstudio did not succeed in the destruction of objects. In their own words, Su-persurface was “the de-finitive product.”</p>
+		<p>A grim reality, Superstudio did not succeed in the destruction of objects. In their own words, Supersurface was “the definitive product.”</p>
 		<p>In response, we propose Microsurface. Microsurface is a process, not a product. Microsurface creates a place to sit where there was previously none. </p>
 		<p>Microsurface is belonging for the Other, the nonhuman, by creating a place to be for the previously unwelcome. Microsurface is a sitscape, an interface removed from a whole. Microsurface has agency and grants agency - to those who wish to engage and to those who do not wish to engage. Rather than totalizing, Microsurface is tactical - offering a mobile acceptance of the current hardscape and potential future for the xeno. Blades of grass pushing up, reaching toward the light, mushrooms popping out of the sole, seeking opposed conditions from their chlorophyllic neighbors, different yet coexisting. Microsurface could be, perhaps, the utopic chair, or a process toward it anyway; Microsurface offers a chance at belonging, inviting the outside in.</p>
 		<br>
